# ignite-new

./: .gitignore  README.md  android capacitor setup.md  capacitor.assets.config.json  generate-docs.js  my-urls.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.js  sonar-project.properties
.github/: copilot_instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml  security.yml  setup.yml
.github/workflows/: docker-publish.yml  release-apk-debug.yml  release-apk-release.yml  release-apks.yml  shiftleft.yml  twa-apk-release.yml
admin/: .env.example  index.html  package.json  vite.config.js
admin/docs/: docs.json
admin/src/: App.jsx  index.css
backend/: .env.example  Dockerfile.txt  WORKER_DEPLOYMENT.md  cloudflare-worker.js  compare-users.js  package.json  server.js  vercel.json  worker-package.json  wrangler.toml
backend/middleware/: auth.js  pdfSecurity.js
backend/models/: AccessLog.js  AccessTag.js  Annotation.js  Folder.js  PDF.js  User.js
backend/routes/: accessTags.js  admin.js  annotations.js  (+4 more)
client/: .env.example  GOOGLE_OAUTH_SETUP.md  app.json  build-android-no-symlinks.bat  capacitor.config.json  check-android-env.bat  index.html  manifest-checksum.txt  package.json  setup-build-env.bat  tailwind.config.js  twa-manifest.json  vercel.json  vite.config.js
client/src-tauri/tauri-plugin-secure-mode/: Cargo.toml
client/src-tauri/tauri-plugin-secure-mode/src/: lib.rs
client/src-tauri/tauri-plugin-secure-mode/src/mobile/: mod.rs
(+88 files in other folders)
