[package]
name = "tauri-plugin-secure-mode"
version = "0.1.0"
description = "A Tauri plugin for enabling Android security features"
authors = ["you"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = [] }
log = "0.4"

[lib]
name = "tauri_plugin_secure_mode"
crate-type = ["cdylib", "rlib"]
